# Auto-UML

./: .gitignore  Cargo.toml  LICENSE  README.md  UML.md  benchmark.sh  build.rs
.github/workflows/: release.yml  update-uml.yml
docs/: README.md  add-a-language.md  benchmark.sh  navigating-the-parser.md
languages/cpp/: config.yaml  test.yaml
languages/cpp/examples/: Box.uml  Calculator.cpp  ComplexData.uml  User.uml
languages/csharp/: config.yaml  test.yaml
languages/csharp/examples/: Box.cs  ComplexData.uml  User.uml
languages/dart/: config.yaml  test.yaml
languages/dart/examples/: Box.dart  Box.uml  Calculator.dart  ComplexData.dart  ComplexData.uml  User.uml
languages/java/: config.yaml  test.yaml
languages/java/examples/: Box.uml  ComplexData.uml  User.uml
languages/javascript/: config.yaml  test.yaml
languages/javascript/examples/: Box.uml  Calculator.uml  ComplexData.uml  User.js  User.uml
languages/kotlin/: config.yaml  test.yaml
languages/kotlin/examples/: Box.kt  Box.uml  Calculator.kt  User.kt  (+4 more)
languages/objc/: config.yaml  test.yaml
languages/rust/: config.yaml  test.yaml
languages/stitch_test/: app.rs
languages/typescript/: config.yaml  test.yaml
src/: diagram.rs  graphviz.rs  lang_config.rs  lib.rs  main.rs  mermaid.rs  program_data.rs  stitcher.rs
test_source_code_examples/: generics.rs  impl_blocks.rs  simple_struct.rs
test_source_code_examples/cpp/: Box.cpp  ComplexData.cpp  User.cpp
test_source_code_examples/csharp/: Calculator.cs  ComplexData.cs  User.cs
test_source_code_examples/dart/: User.dart
test_source_code_examples/java/: Box.java  Calculator.java  ComplexData.java  User.java
test_source_code_examples/javascript/: Box.js  Calculator.js  ComplexData.js
test_source_code_examples/objc/: ComplexData.m
test_source_code_examples/rust/: complex_types.rs
test_source_code_examples/typescript/: Box.ts  Calculator.ts  User.ts
tests/: integration_tests.rs
(+20 files in other folders)
