[package]
name = "auto-uml"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "An automatic UML diagram generator for a variety of programming languages"
readme = "README.md"
documentation = "https://github.com/EthanDGee/Auto-UML"
repository = "https://github.com/EthanDGee/Auto-UML"
keywords = ["cli", "cli-tool", "UML", "documentation"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tree-sitter = "0.26.6"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-objc = "3.0.2"
tree-sitter-dart = "0.0.4"
git2 = "0.20.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
include_dir = "0.7.4"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
glob = "0.3.1"
